cmake_minimum_required(VERSION 3.21)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
project(playground)

if (MSVC)
    add_compile_options(/Zc:preprocessor /utf-8 /DNOMINMAX)
else()
    add_compile_options(-Wall -Wextra -Werror=return-type)
endif()

# include(FetchContent)
# set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Turn off google benchmark test")
# FetchContent_Declare(benchmark GIT_REPOSITORY https://github.com/google/benchmark GIT_TAG main)
# FetchContent_Declare(cxxopts GIT_REPOSITORY https://github.com/jarro2783/cxxopts)
# FetchContent_MakeAvailable(benchmark cxxopts)

file(GLOB sources CONFIGURE_DEPENDS "src/std/*.cpp")
foreach(source IN LISTS sources)
  get_filename_component(name ${source} NAME_WE)
  add_executable(${name} ${source})
  set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/std" )
  target_include_directories(${name} PRIVATE src)
endforeach()
